--- a/SUV_beh/manifest.json
+++ b/SUV_beh/manifest.json
@@ -2,8 +2,8 @@
     "format_version": 2,
     "header": {
       "name": "SUV_beh",
-      "description": "",
-      "version": [ 1, 0, 0 ],
+      "description": "first release!",
+      "version": [ 1, 0, 1 ],
       "uuid": "418cffc0-8228-4cd9-8093-a7672f693a39",
       "min_engine_version": [ 1, 13, 0 ]
     },
@@ -11,7 +11,7 @@
       {
         "type": "data",
         "description": "",
-        "version": [ 1, 0, 0 ],
+        "version": [ 1, 0, 1 ],
         "uuid": "fce817fc-ccd4-4c5f-83b0-8befdb1bbbd8"
       }
     ]
